[FIX]Arrow animation overlapping image.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -47,7 +47,7 @@
 
 .arrow {
   text-align: center;
-  margin: 4% 0;
+  margin: 40px 0;
 }
 
 .bounce {
